LP2066069 Grid toolbar button size correction [for 3.13]
Fixes an issue where grid toolbar buttons could become vertically
stretched in narrow screen sizes, or if there were enough buttons on the
left side of the toolbar to wrap to a second line.

This is based on a patch for rel_3_12 by Stephanie Leary

Release-note: Correct grid toolbar button sizes in narrow screen sizes

--- a/Open-ILS/src/eg2/src/app/share/grid/grid.component.css
+++ b/Open-ILS/src/eg2/src/app/share/grid/grid.component.css
@@ -125,6 +125,10 @@ table.table.eg-grid {
   flex-basis: 100%;
 }
 
+.eg-grid-toolbar {
+    align-items: flex-end;
+}
+
 .eg-grid-toolbar .material-icons {
   font-size: 20px;
 }
